02-partition/02-network-policies/solution/frontend-denied-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: app
  name: frontend-denied-policy
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress: []
